--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-# local package
--e .
+matplotlib==3.5.2
+mysql_connector_repackaged==0.3.1
+numpy==1.22.4
+pandas==1.4.3
+python-dotenv==1.0.0
+scikit_survival==0.22.1
+scipy==1.4.1
+seaborn==0.13.1
+setuptools==65.4.0
+statsmodels==0.13.2
